Files are formatted if their path contains 'src/{main,test}/java'